kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: production-app
  namespace: production
  serviceAccountName: production-app-sa 
spec:
  replicas: 2

  selector:
    matchLabels:
      app: production-app

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: production-app

    spec:
      containers:
      - name: production-app

        image: geetha5/production-app:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "250m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        volumeMounts:
        - name: app-storage
          mountPath: /app/data

        readinessProbe:
          httpGet:
            path: /
            port: 3000

          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 3000

          initialDelaySeconds: 30
          periodSeconds: 10

      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: production-app-pvc
